@@ -95,6 +95,11 @@ void app_error_fault_handler(uint32_t id, uint32_t pc, uint32_t info) {
 #include "jswrap_microbit.h"
 #endif
 
+#ifndef SAVE_ON_FLASH
+// Enable 7 bit UART (this must be done in software)
+#define ESPR_UART_7BIT 1
+#endif
+
 void WDT_IRQHandler() {
 }
 
@@ -418,6 +423,10 @@ typedef struct {
   uint8_t rxBuffer[2]; // 2 char buffer
   bool isSending;
   bool isInitialised;
+#ifdef ESPR_UART_7BIT
+  bool is7Bit;
+  uint8_t parity;
+#endif
   uint8_t txBuffer[1];
 } PACKED_FLAGS jshUARTState;
 static jshUARTState uart[USART_COUNT];
@@ -1738,6 +1747,12 @@ void uart_startrx(int num) {
 void uart_starttx(int num) {
   int ch = jshGetCharToTransmit(EV_SERIAL1+num);
   if (ch >= 0) {
+#ifdef ESPR_UART_7BIT
+    if (uart[num].is7Bit) ch&=0x7F;
+    if (uart[num].parity) { // set parity (which is now in bit 8)
+      if (calculateParity(ch)==(uart[num].parity==2)) ch |= 0x80;
+    }
+#endif
     uart[num].isSending = true;
     uart[num].txBuffer[0] = ch;
     ret_code_t err_code = nrf_drv_uart_tx(&UART[num], uart[num].txBuffer, 1);
@@ -1751,6 +1766,19 @@ static void uart_event_handle(int num, nrf_drv_uart_event_t * p_event, void* p_c
       // Char received
       uint8_t ch = p_event->data.rxtx.p_data[0];
       nrf_drv_uart_rx(&UART[num], p_event->data.rxtx.p_data, 1);
+#ifdef ESPR_UART_7BIT
+      if (uart[num].is7Bit) {
+        bool parityBit = (ch&0x80) != 0;
+        ch&=0x7F;
+        if (uart[num].parity) { // check parity (which was in bit 8)
+          if ((calculateParity(ch)==parityBit)!=(uart[num].parity==2)) {
+            // parity error. Should we report it?
+            if (jshGetErrorHandlingEnabled(EV_SERIAL1+num))
+              jshPushIOEvent(IOEVENTFLAGS_SERIAL_TO_SERIAL_STATUS(EV_SERIAL1+num) | EV_SERIAL_STATUS_PARITY_ERR, 0);
+          }
+        }
+      }
+#endif
       jshPushIOCharEvent(EV_SERIAL1+num, (char)ch);
       jshHadEvent();
     } else if (p_event->type == NRF_DRV_UART_EVT_ERROR) {
@@ -1812,6 +1840,12 @@ void jshUSARTSetup(IOEventFlags device, JshUSARTInfo *inf) {
     return;
 
   unsigned int num = device-EV_SERIAL1;
+
+  if (uart[num].isInitialised) {
+    uart[num].isInitialised = false;
+    nrf_drv_uart_uninit(&UART[num]);
+  }
+
   nrf_uart_baudrate_t baud = (nrf_uart_baudrate_t)nrf_utils_get_baud_enum(inf->baudRate);
   if (baud==0)
     return jsError("Invalid baud rate %d", inf->baudRate);
@@ -1821,11 +1855,24 @@ void jshUSARTSetup(IOEventFlags device, JshUSARTInfo *inf) {
   jshSetFlowControlEnabled(device, inf->xOnXOff, inf->pinCTS);
   jshSetErrorHandlingEnabled(device, inf->errorHandling);
 
-  if (uart[num].isInitialised) {
-    uart[num].isInitialised = false;
-    nrf_drv_uart_uninit(&UART[num]);
-  }
+  if (inf->stopbits!=1)
+    return jsExceptionHere(JSET_INTERNALERROR, "Unsupported serial stopbits length.");
+
   uart[num].isInitialised = false;
+  if (inf->bytesize==8) {
+    if (inf->parity==1)
+      return jsExceptionHere(JSET_INTERNALERROR, "Odd parity not supported");
+#ifdef ESPR_UART_7BIT
+    uart[num].is7Bit = false;
+    uart[num].parity = 0;
+  } else if (inf->bytesize==7) {
+    uart[num].is7Bit = true;
+    uart[num].parity = inf->parity;
+    inf->parity = 0; // no parity bit for 7 bit output
+#endif
+  } else
+    return jsExceptionHere(JSET_INTERNALERROR, "Unsupported serial byte size.");
+
   JshPinFunction JSH_USART = JSH_USART1+(num<<JSH_SHIFT_TYPE);
 
   // APP_UART_INIT will set pins, but this ensures we know so can reset state later
